--- a/index.html
+++ b/index.html
@@ -350,8 +350,9 @@
       ready();
     }
     
-    document.querySelector('button').addEventListener('click', function() {
+    document.querySelector('radio').addEventListener('click', function() {
   //var context = new AudioContext();
+      alert("setting up audio context");
       audioCtx = new AudioContext || window.webkitAudioContext;
   // Setup all nodes
   // ...
