--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
       ready();
     }
     
-    document.setElementById("buttonWaveformSine").addEventListener('click', function() {
+    document.getElementById("buttonWaveformSine").addEventListener('click', function() {
   //var context = new AudioContext();
       alert("setting up audio context");
       audioCtx = new AudioContext || window.webkitAudioContext;
@@ -363,7 +363,7 @@
 </head>
 
 <body>
-version 3<br>
+version 4<br>
   
   <input type="radio" name="waveforms" id="buttonWaveformSine" value="sine"> sine
   <input type="radio" name="waveforms" id="buttonWaveformSquare" value="square"> sawtooth
